fix rail size space issue on mobile / fix theme issue on load

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -36,7 +36,7 @@ main {
 }
 
 main {
-    margin-left: 68px;
+    margin-left: 70px;
 }
 
 #root-content {
