--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,6 +1,7 @@
 .flat {
     #rail {
         background-color: color(light-primary);
+        width: 70px;
         .nav-link {
             color: white;
             .nav-icon {
